syntax = "proto3";

option csharp_namespace = "API";

package offer;

service Offer{
  rpc GetLatestOffers(GetLatestOffersRequest) returns (GetLatestOffersResponse);
  rpc GetAvailableOffers(GetAvailableOffersRequest) returns (GetAvailableOffersResponse);
}

// GetLatestOffer
message GetLatestOffersRequest{
  int32 count = 1;
}

message GetLatestOffersResponse{
  repeated GeneralOfferInfo Offers = 1;
}

message GeneralOfferInfo {
  int32  id    = 1;
  string name  = 2;
  bytes  image = 3;
}

// GetAvailableOffers
message GetAvailableOffersRequest {
  int32 seanceId = 1;
}

message GetAvailableOffersResponse {
  repeated AvailableOfferInfo offers = 1;
}

message AvailableOfferInfo {
  int32  id          = 1;
  string name        = 2;
  string description = 3;
}