syntax = "proto3";

option csharp_namespace = "API";

package seance;

service Seance{
  rpc GetClosestSeances(GetClosestSeancesRequest) returns (GetClosestSeancesResponse);
}

// GetClosestSeances
message GetClosestSeancesRequest {
  int32 movieId = 1;
}

message GetClosestSeancesResponse {
  repeated SeanceInfoArray values = 1;
}

message SeanceInfoArray {
  string              key     = 1;
  repeated SeanceInfo seances = 2;
}

message SeanceInfo {
  int32  id        = 1;
  string time      = 2;
}